- Fixed: Alignment of the navigator toolbox when collapsed mode - Fixed: Margin to display correctly the overflow indicators

--- a/Neo Zen V1.0.0/NeoZen/Theme/Sidebar/Sidebar.css
+++ b/Neo Zen V1.0.0/NeoZen/Theme/Sidebar/Sidebar.css
@@ -13,3 +13,7 @@ zen-workspace[active]:not([hidden]) {
     transition: height 0.3s cubic-bezier(0.175, 1.385, 0.62, 1), min-height 0.3s cubic-bezier(0.175, 1.385, 0.62, 1), max-height 0.3s cubic-bezier(0.175, 1.385, 0.62, 1), top 0.3s cubic-bezier(0.175, 1.385, 0.62, 1), margin 0.3s cubic-bezier(0.175, 1.385, 0.62, 1) !important;
     
 }
+
+#navigator-toolbox:not([zen-sidebar-expanded="true"]) {
+  padding-bottom: calc(var(--zen-toolbox-padding) + 5px) !important;
+}
